added cursor pointer on section third v1

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
           <div class="flex items-center gap-9">
                <!-- For Active -->
-            <div class="flex items-center gap-2 justify-between w-[8rem] 2xl:w-[700px] bg-[#EAF1FB] h-[9vh] 2xl:h-[6vh] px-3 rounded-full text-gray-500">
+            <div class="flex items-center gap-2 justify-between w-[8rem] 2xl:w-[700px] bg-[#EAF1FB] h-[9vh] 2xl:h-[6vh] px-3 rounded-full text-gray-500 cursor-pointer">
           
                 <i class="fa-solid fa-circle text-green-800 text-[15px]"></i>
                 <p class="font-bold text-black">Active</p>
